--- a/src/components/Styles/styles.css
+++ b/src/components/Styles/styles.css
@@ -70,12 +70,16 @@ img {
  */
 .SearchForm {
   display: flex;
-  align-items: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   width: 100%;
   max-width: 600px;
-  background-color: #fff;
-  border-radius: 3px;
+  background-color: hsl(232, 9%, 50%);
+  border-radius: 10px;
   overflow: hidden;
+
 }
 
 .SearchForm-button {
@@ -87,10 +91,12 @@ img {
   background-size: 40%;
   background-repeat: no-repeat;
   background-position: center;
+  background-color: #fff;
   opacity: 0.6;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   outline: none;
+  
 }
 
 .SearchForm-button:hover {
@@ -106,7 +112,7 @@ img {
   clip: rect(0, 0, 0, 0);
   white-space: nowrap;
   clip-path: inset(50%);
-  border: 0;
+  
 }
 
 .SearchForm-input {
@@ -116,13 +122,16 @@ img {
   font-size: 20px;
   border: none;
   outline: none;
-  padding-left: 4px;
-  padding-right: 4px;
+  padding: 10px;
+  background-color: hsl(232, 9%, 50%);
+  color: #fff;
+
 }
 
 .SearchForm-input::placeholder {
   font: inherit;
   font-size: 18px;
+  color: #fff;
 }
 
 /*
@@ -270,6 +279,41 @@ font-size: 50px;
 margin-top: 50px;
 text-align: center;
 font-size: 25px;
-color: #554a4a80;
+color: #08080836;
 
+}
+
+
+
+.item {
+  display: block;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  text-decoration: none;
+  color: #212121;
+text-align: center;
+border: 1px solid  #c4bebe;
+border-radius: 10px;
+padding-bottom: 10px;
+background-color: #fff;
+
+
+}
+
+
+.item:hover:not(.active),
+:focus-visible:not(.active) {
+  color:rgba(0, 0, 0, 0.8);
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+  0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+}
+
+
+.icon {
+  margin-right: 10px;
+}
+
+header {
+  background-image: url('./IMG_20221014_175200.jpg');
 }
