--- a/src/components/Styles/styles.css
+++ b/src/components/Styles/styles.css
@@ -28,6 +28,16 @@ img {
   height: auto;
 }
 
+h2{
+  margin-bottom: 5px;
+}
+
+p{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15px;
+  margin-bottom: 5px;
+}
+
 
 
 /*
