--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,9 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  display: block;
 
+justify-content: center;
 
 }
